daemon/src/dao/snapshots/kalatori__dao__invoice__tests__date_range_before_boundary.snap
---
source: daemon/src/dao/invoice.rs
assertion_line: 1547
expression: result
---
- invoice:
    id: "[uuid]"
    order_id: "[uuid]"
    asset_id: "1984"
    asset_name: USDT
    chain: PolkadotAssetHub
    amount: "100.00"
    payment_address: 5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY
    status: Waiting
    cart:
      items: []
    redirect_url: "http://localhost:8080/thankyou"
    valid_till: "[timestamp]"
    created_at: "[timestamp]"
    updated_at: "[timestamp]"
  total_received_amount: "0"
- invoice:
    id: "[uuid]"
    order_id: "[uuid]"
    asset_id: USDC
    asset_name: USDC
    chain: Polygon
    amount: "250.50"
    payment_address: 5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY
    status: Waiting
    cart:
      items: []
    redirect_url: "http://localhost:8080/thankyou"
    valid_till: "[timestamp]"
    created_at: "[timestamp]"
    updated_at: "[timestamp]"
  total_received_amount: "0"
- invoice:
    id: "[uuid]"
    order_id: "[uuid]"
    asset_id: "1984"
    asset_name: USDT
    chain: PolkadotAssetHub
    amount: "75.00"
    payment_address: 5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY
    status: Paid
    cart:
      items: []
    redirect_url: "http://localhost:8080/thankyou"
    valid_till: "[timestamp]"
    created_at: "[timestamp]"
    updated_at: "[timestamp]"
  total_received_amount: "75.00"
- invoice:
    id: "[uuid]"
    order_id: "[uuid]"
    asset_id: USDC
    asset_name: USDC
    chain: Polygon
    amount: "500.00"
    payment_address: 5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY
    status: PartiallyPaid
    cart:
      items: []
    redirect_url: "http://localhost:8080/thankyou"
    valid_till: "[timestamp]"
    created_at: "[timestamp]"
    updated_at: "[timestamp]"
  total_received_amount: "200.00"
