daemon/src/dao/snapshots/kalatori__dao__invoice__tests__paginated_filter_by_asset_id.snap
---
source: daemon/src/dao/invoice.rs
expression: result
---
- invoice:
    id: "[uuid]"
    order_id: "[uuid]"
    asset_id: USDC
    asset_name: USDC
    chain: Polygon
    amount: "99.99"
    payment_address: 5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY
    status: AdminCanceled
    cart:
      items: []
    redirect_url: "http://localhost:8080/thankyou"
    valid_till: "[timestamp]"
    created_at: "[timestamp]"
    updated_at: "[timestamp]"
  total_received_amount: "0"
  total_fee: "0"
- invoice:
    id: "[uuid]"
    order_id: "[uuid]"
    asset_id: USDC
    asset_name: USDC
    chain: PolkadotAssetHub
    amount: "300.00"
    payment_address: 5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY
    status: OverPaid
    cart:
      items: []
    redirect_url: "http://localhost:8080/thankyou"
    valid_till: "[timestamp]"
    created_at: "[timestamp]"
    updated_at: "[timestamp]"
  total_received_amount: "325.00"
  total_fee: "1.30"
- invoice:
    id: "[uuid]"
    order_id: "[uuid]"
    asset_id: USDC
    asset_name: USDC
    chain: Polygon
    amount: "500.00"
    payment_address: 5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY
    status: PartiallyPaid
    cart:
      items: []
    redirect_url: "http://localhost:8080/thankyou"
    valid_till: "[timestamp]"
    created_at: "[timestamp]"
    updated_at: "[timestamp]"
  total_received_amount: "200.00"
  total_fee: "0"
- invoice:
    id: "[uuid]"
    order_id: "[uuid]"
    asset_id: USDC
    asset_name: USDC
    chain: Polygon
    amount: "250.50"
    payment_address: 5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY
    status: Waiting
    cart:
      items: []
    redirect_url: "http://localhost:8080/thankyou"
    valid_till: "[timestamp]"
    created_at: "[timestamp]"
    updated_at: "[timestamp]"
  total_received_amount: "0"
  total_fee: "0"
