daemon/src/dao/snapshots/kalatori__dao__invoice__tests__paginated_filter_by_order_id.snap
---
source: daemon/src/dao/invoice.rs
expression: result
---
- invoice:
    id: "[uuid]"
    order_id: SHOP-2024-002
    asset_id: "0x3c499c542cEF5E3811e1192ce70d8cC03d5c3359"
    asset_name: USDC
    chain: Polygon
    amount: "100.00"
    payment_address: "0x45f077823C8d036a1a9f7Cd28e86Bd98191dF2b7"
    status: Waiting
    cart:
      items: []
    redirect_url: "http://localhost:8080/thankyou"
    valid_till: "[timestamp]"
    created_at: "[timestamp]"
    updated_at: "[timestamp]"
  total_received_amount: "0"
- invoice:
    id: "[uuid]"
    order_id: SHOP-2024-001
    asset_id: "0x3c499c542cEF5E3811e1192ce70d8cC03d5c3359"
    asset_name: USDC
    chain: Polygon
    amount: "100.00"
    payment_address: "0x45f077823C8d036a1a9f7Cd28e86Bd98191dF2b7"
    status: Waiting
    cart:
      items: []
    redirect_url: "http://localhost:8080/thankyou"
    valid_till: "[timestamp]"
    created_at: "[timestamp]"
    updated_at: "[timestamp]"
  total_received_amount: "0"
