daemon/src/dao/snapshots/kalatori__dao__invoice__tests__paginated_limit_offset.snap
---
source: daemon/src/dao/invoice.rs
assertion_line: 1439
expression: result
---
- invoice:
    id: "[uuid]"
    order_id: "[uuid]"
    asset_id: USDC
    asset_name: USDC
    chain: Polygon
    amount: "500.00"
    payment_address: 5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY
    status: PartiallyPaid
    cart:
      items: []
    redirect_url: "http://localhost:8080/thankyou"
    valid_till: "[timestamp]"
    created_at: "[timestamp]"
    updated_at: "[timestamp]"
  total_received_amount: "200.00"
- invoice:
    id: "[uuid]"
    order_id: "[uuid]"
    asset_id: USDC
    asset_name: USDC
    chain: PolkadotAssetHub
    amount: "300.00"
    payment_address: 5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY
    status: OverPaid
    cart:
      items: []
    redirect_url: "http://localhost:8080/thankyou"
    valid_till: "[timestamp]"
    created_at: "[timestamp]"
    updated_at: "[timestamp]"
  total_received_amount: "325.00"
- invoice:
    id: "[uuid]"
    order_id: "[uuid]"
    asset_id: "1984"
    asset_name: USDT
    chain: Polygon
    amount: "42.00"
    payment_address: 5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY
    status: UnpaidExpired
    cart:
      items: []
    redirect_url: "http://localhost:8080/thankyou"
    valid_till: "[timestamp]"
    created_at: "[timestamp]"
    updated_at: "[timestamp]"
  total_received_amount: "0"
